add role and status change tasks
